--- a/Students/Views/Students/Index.cshtml
+++ b/Students/Views/Students/Index.cshtml
@@ -125,7 +125,7 @@
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary" onclick="addUser()" id="btnAdd">Save changes</button>
+                <button type="button" class="btn btn-primary" onclick="addStudent()" id="btnAdd">Save changes</button>
             </div>
         </div>
     </div>
